Tests with JDK9 UseCGroupMemoryLimitForHeap option